--- a/package.json
+++ b/package.json
@@ -6,7 +6,20 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server  --config webpack.dev.js --open",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "test": "jest"
+  },
+  "jest": {
+    "setupFiles": [
+      "jest-canvas-mock"
+    ],
+    "setupFilesAfterEnv": [
+      "jest-expect-subclass"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less|sass|scss)$": "<rootDir>/test/mocks/styleMock.js",
+      "\\.(gif|ttf|eot|svg|png|mp3)$": "<rootDir>/test/mocks/fileMock.js"
+    }
   },
   "repository": {
     "type": "git",
@@ -21,7 +34,7 @@
   "homepage": "https://github.com/Eshy10/Adventurer#readme",
   "devDependencies": {
     "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-env": "^7.11.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
@@ -30,6 +43,9 @@
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "jest": "^26.4.2",
+    "jest-canvas-mock": "^2.2.0",
+    "jest-expect-subclass": "^1.0.1",
     "json-loader": "^0.5.7",
     "json5-loader": "^4.0.0",
     "mini-css-extract-plugin": "^0.9.0",
