--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
       "jest-expect-subclass"
     ],
     "moduleNameMapper": {
-      "\\.(css|less|sass|scss)$": "<rootDir>/test/mocks/styleMock.js",
-      "\\.(gif|ttf|eot|svg|png|mp3)$": "<rootDir>/test/mocks/fileMock.js"
-    }
+      "\\.(css|less|sass|scss)$": "<rootDir>/tests/mock/styleMock.js",
+      "\\.(gif|ttf|eot|svg|png|mp3)$": "<rootDir>/tests/mock/fileMock.js"
+    },
+    "testMatch": [ "**/?(*.)+(test).[jt]s?(x)" ]
   },
   "repository": {
     "type": "git",
